Basic teams endpoint
